# UltimateTicTacToe

./: .gitignore  Cargo.toml  README.md
benches/game/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/hausarbeit/: all.html  index.html  sidebar-items.js
processing/: Cargo.toml
processing/src/: main.rs  multiple_depths.rs  single_depth.rs  turnier.rs
src/: agent.rs  bitboard.rs  board.rs  custom_heuristic.rs  game.rs  game_result.rs  heuristic.rs  human_agent.rs  lib.rs  main.rs  minimax_agent.rs  monte_carlo_game_search_heuristic.rs  parameterized_heuristic.rs  player.rs  quality_test.rs  random_agent.rs  ultimate_board.rs
src/agent/: benched.rs  human_agent.rs  minimax_agent.rs  mod.rs  random_agent.rs  random_start.rs
src/agents/: human_agent.rs  minimax_agent.rs  mod.rs  random_agent.rs
src/game/: bitboard.rs  board.rs  game_result.rs  mod.rs  player.rs  ultimate_board.rs
src/genetic_algorithm/: fitness_function.rs  gene.rs  mod.rs  mutation.rs  recombination.rs  selection.rs
src/heuristic/: custom_heuristic.rs  mod.rs  monte_carlo_game_search_heuristic.rs  parameterized_heuristic.rs
src/heuristics/: custom_heuristic.rs  mod.rs  monte_carlo_game_search_heuristic.rs  parameterized_heuristic.rs
src/runtime_test/: mod.rs
src/tree/: mod.rs
tests/: Auswertung.xlsx  mcts 1000-10000.csv  res mcts 1000-10000.csv  res sh 1-10.csv  res sh qs 0-4.csv  sh 1-10.csv  sh qs 0-4.csv  sh qs win stats 0-4.csv  used for experiments.gene
tests/turnier/: mcts vs mh.csv  mcts vs ph.csv  mcts vs rand.csv  (+19 more)
(+260 files in other folders)
