[package]
name = "hausarbeit"
version = "0.1.0"
edition = "2021"

#[profile.release]
#debug = true

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
once_cell = "1.19.0"
rand_chacha = "0.3.1"
colored = "2.1.0"
itertools = "0.13.0"
rand_distr = "0.4.3"
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "game"
harness = false
